# spotdl

./: .cache  .env  .gitignore  main.py  pyproject.toml
bot/: config.py  downloader.py  handlers.py  spotify_service.py
